@@ -1,5 +1,11 @@
 2010-04-21  Pierre Muller  <muller@ics.u-strasbg.fr>
 
+	PR pascal/11492.
+	* p-valprint.c (pascal_val_print): Fix default printing of integer
+	arrays.
+
+2010-04-21  Pierre Muller  <muller@ics.u-strasbg.fr>
+
 	Fix compilation warning on gcc-4.1.2.
 	* rs6000-aix-tdep.c (rs6000_convert_from_func_ptr_addr): Initialize
 	local variable`pc' to zero.
